Project birthday_bot {
  database_type: "PostgreSQL"
  note: "Telegram-бот для нагадування про дні народження."
}

Table app_users [headercolor: #175eab, note: '👤 Користувачі бота'] {
  id bigint [pk, increment]
  telegram_user_id bigint [not null, unique, note: 'Унікальний ID з Telegram']
  chat_id bigint [not null, note: 'ID чату для відправки повідомлень']
  username text [note: 'Telegram @username']
  first_name text
  last_name text
  language_code text [note: 'Мова користувача']
  timezone text [not null, default: "Europe/Kyiv", note: 'Часовий пояс']
  registered_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table contacts [headercolor: #2ca02c, note: '📒 Збережені дні народження'] {
  id bigint [pk, increment]
  owner_user_id bigint [not null, ref: > app_users.id, note: 'Хто додав цей контакт']
  first_name text [not null, note: "Ім'я (1..80 символів)"]
  last_name text [not null, note: "Прізвище (1..80 символів)"]
  first_name_key text [not null, note: "Для пошуку (нижній регістр)"]
  last_name_key text [not null, note: "Для пошуку (нижній регістр)"]
  birth_date date [not null, note: "Дата народження"]
  telegram_username text [note: "Telegram @нікнейм друга (необов'язково)"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (owner_user_id, first_name_key, last_name_key) [name: "contacts_owner_name_idx"]
    (owner_user_id, first_name_key, last_name_key, birth_date) [unique]
  }
}

Table reminder_settings [headercolor: #ff7f0e, note: '⚙️ Налаштування нагадувань'] {
  user_id bigint [pk, ref: > app_users.id]
  enabled boolean [not null, default: true, note: 'Чи включені нагадування взагалі']
  remind_days_before integer[] [not null, default: `{0}`, note: "За скільки днів нагадувати: 0,1,3,7,14,30"]
  remind_time time [not null, default: "09:00", note: 'Час нагадування']
  timezone text [not null, default: "Europe/Kyiv"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table conversation_states [headercolor: #d62728, note: '🧠 Пам\'ять діалогів (State Machine)'] {
  user_id bigint [pk, ref: > app_users.id]
  state text [not null, note: 'Поточний крок діалогу (напр. очікуємо ім\'я)']
  data jsonb [not null, default: `{}`, note: 'Тимчасові дані']
  updated_at timestamptz [not null, default: `now()`]
}

Table reminder_log [headercolor: #9467bd, note: '📜 Історія надісланих нагадувань'] {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > app_users.id]
  contact_id bigint [not null, ref: > contacts.id, note: 'Про кого нагадували']
  remind_for_date date [not null, note: 'Яка дата дня народження']
  days_before integer [not null, note: "За скільки днів було нагадування"]
  sent_at timestamptz [not null, default: `now()`]

  indexes {
    sent_at [name: "reminder_log_sent_at_idx"]
    (user_id, contact_id, remind_for_date, days_before) [unique]
  }
}
